--- a/project/createarttalk.html
+++ b/project/createarttalk.html
@@ -98,7 +98,9 @@
 
     <div id="list-example" class="list-group col-lg-2">
         <a class="list-group-item list-group-item-action" href="#overview">總覽</a>
-        <a class="list-group-item list-group-item-action" href="#process">設計過程</a>
+        <a class="list-group-item list-group-item-action" href="#front-end">前端設計</a>
+        <a class="list-group-item list-group-item-action" href="#taicca">文策院加速器</a>
+        <!-- <a class="list-group-item list-group-item-action" href="#taicca">文策院加速器</a> -->
         <a class="ms-3 list-group-item list-group-item-action" href="#good-night">晚安</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#light-sleep">淺眠期</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#rapid-eye">快速動眼期</a>
@@ -115,142 +117,98 @@
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>團隊介紹</strong></h3>
                         <div class="content-black">
-                            <p>CreateArtTalk 為國立陽明交通大學 IoT 技術與科技藝術跨領域實驗團隊技轉出發之新創團隊，由兩位教授：陽交大資工系林一平教授與南藝大羅禾淋教授擔任團隊總技術顧問，團隊成員主要由跨領域學生組成。</p>
+                            <p>CreateArtTalk 為國立陽明交通大學 IoT 技術與科技藝術跨領域實驗團隊技轉出發之新創團隊，由兩位教授：國立陽明交通大學林一平教授與國立臺南藝術大學羅禾淋教授擔任團隊總技術顧問，而團隊成員主要由跨領域學生組成。</p>
                         </div>
                     </div>
-                    <div class="col-lg-8 my-3">
-                        <h3 class="page-heading"><strong>挑戰</strong></h3>
-                        <div class="row dding mt-2 ">
-                            <ui class="content-black ">
-                                <li class="mb-2">整合團隊現有資料，製作靜態前端網頁</li>
-                                <li class="my-2">文策院文化新創加速器第三期結案</li>
-                                <li class="my-2">統整現有系統流程，規劃未來產品</li>
-                            </ui>
-                        </div>
-                    </div>
-
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>負責工作</strong></h3>
-                        <div class="content-black">
-                            <p>與三位同學合作製作此展演專題。我負責主題的發想與淺眠期光影撥弦效果製作，包含夢境各階段的構思與呈現意象，以及實作 Touch Designer 結合 Kinect 偵測人影的效果。</p>
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/work-dream.png" alt="夢中夢 負責工作 ">
+                        <div class="row list-padding mt-2 ">
+                            <ui class="content-black ">
+                                <li class="mb-2">整合團隊現有資料，製作靜態前端網頁</li>
+                                <li class="my-2">文策院文化新創加速器第三期 Demo Day 發表</li>
+                                <li class="my-2">統整現有系統流程，規劃未來產品</li>
+                            </ui>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="process" class="list-item">
+        <section id="process" class="list-item" style="background-color: #f7f7f7;">
             <div class="container">
-                <h4 class="heading my-4 project-heading">設計過程 Process</h4>
+                <h4 class="heading my-4 project-heading">前端設計 Front-end Design</h4>
                 <div class="row justify-content-center">
                     <div class="col-lg-8 my-3">
-                        <h3 class="page-heading"><strong>夢中夢：夢境四階段</strong></h3>
-                        <div class="content-black">
-                            <p>「夢中夢」將夢境切分為四階段：晚安、淺眠期、快速眼動期、熟睡期。
-                            </p>
-                            <p>從半夢半醒至逐漸沉睡；從昏眩至掌控；從黑白至炫彩；從緩慢至急促，逐漸引導觀眾進入深沉睡眠。
-                            </p>
+                        <h3 class="page-heading"><strong><span>CreateArtTalk</span> 官網</strong></h3>
+                        <div class="row list-padding mt-2 ">
+                            <ui class="content-black ">
+                                <li class="mb-2">獨力完成網頁前端設計，使用 HTML、CSS、Javascript、jQuery 製作網頁</li>
+                                <li class="mb-2">首頁採用 three.js、particle.js 製作 banner</li>
+                                <li class="my-2">整合團隊目前作品，撰寫文稿與版型排版設計</li>
+                            </ui>
                         </div>
-                        <div id="good-night" class="mt-5">
-                            <h3 class="page-heading mb-3 "><strong>01 晚安</strong></h3>
-                            <div class="content-black">
-                                <p>透過<span>互動式按鈕</span>來象徵按下開關來關燈，作為<span>夢境的起點</span>。再來是彩色隧道，透過速度以及色彩變化來讓觀者了解，此處即將進入一個虛幻、不真實的夢境世界。
-                                </p>
-                            </div>
-
-                            <div class="row justify-content-start">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/start1-dream.png" alt="夢中夢 晚安 ">
-                                </div>
-                            </div>
-                            <div class="row justify-content-end">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/start2-dream.png" alt="夢中夢 晚安 ">
-                                </div>
+                        <div class="d-flex justify-content-center ">
+                            <img class="my-4 img-margin" width="100% " src="../img/special-project/createarttalk/sitmap-cat.png" alt="createarttalk 網頁架構圖">
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-lg-8 col-md-6 col-sm-12">
+                                <img class="mt-4 mb-2 img-margin " width="100% " src="../img/special-project/createarttalk/front1-cat.png" alt="createarttalk 首頁">
                             </div>
                         </div>
-
-                        <div id="light-sleep" class="mt-5">
-                            <h3 class="page-heading mb-3 "><strong>02 淺眠期</strong></h3>
-                            <div class="content-black">
-                                <p>入睡初期，人處於半夢半醒的狀態，夢並不豐富，僅呈現黑白。 透過<span>互動式的可波動線條、隨人影舞動的粒子光影，打造夢境世界</span>，使其能更沉浸其中，進入更深度的睡眠狀態。
-                                </p>
+                        <div class="row justify-content-end">
+                            <div class="col-lg-8 col-md-6 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/front2-cat.png" alt="createarttalk 首頁">
                             </div>
-
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/cover-dream.png" alt="夢中夢 淺眠期 ">
-                                </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-lg-8 col-md-6 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/front6-cat.png" alt="createarttalk 專案頁">
+                            </div>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-lg-8 col-md-6 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/front4-cat.png" alt="createarttalk 首頁">
+                            </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-lg-8 col-md-6 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/front5-cat.png" alt="createarttalk 首頁">
                             </div>
                         </div>
 
-                        <div id="rapid-eye" class="mt-5">
-                            <h3 class="page-heading mb-3 "><strong>03 快速動眼期</strong></h3>
-                            <div class="content-black">
-                                <p>在此睡眠階段中，眼球會快速移動，腦部的活動很活躍，大部分的夢也都是在這個階段發生。使用<span>鮮豔的色彩、流動的抽象圖形</span>，搭配快節奏音樂呈現此階段的<span>迷幻動態感</span>，讓觀眾迷失在夢境的世界中。
-                                </p>
-                            </div>
-
-                            <div class="row justify-content-end">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/fast1-dream.png" alt="夢中夢 快速動眼期">
-                                </div>
-                            </div>
-                            <div class="row justify-content-start">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/fast2-dream.png" alt="夢中夢 快速動眼期">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="deep-sleep" class="mt-5">
-                            <h3 class="page-heading mb-3 "><strong>04 熟睡期</strong></h3>
-                            <div class="content-black">
-                                <p>此階段我們慢慢失去自主的控制權，夢夢漸入尾聲，畫面也從簡單平穩變為複雜而混亂。<span>配合音樂轉換視覺及互動效果</span>，透過線條與立體粒子變化，讓情緒最高處收尾，把人快速拉回現實。
-                                </p>
-                            </div>
-
-                            <div class="row justify-content-start">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/sleep1-dream.png" alt="夢中夢 熟睡期">
-                                </div>
-                            </div>
-                            <div class="row justify-content-end">
-                                <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/sleep2-dream.png" alt="夢中夢 熟睡期">
-                                </div>
-                            </div>
-                        </div>
 
                     </div>
-                    <!-- 
-
-
-                    <div id="conclusion" class="col-lg-8 my-5">
-                        <h3 class="page-heading mb-3 "><strong>06 結論</strong></h3>
-                        <div class="content-black">
-                            <p>在使用者測試後得到的實質回饋，得以協助我們修正網站的缺失，提醒我們未能發掘的觀點，於以在未來改善修正成擁有良好使用者體驗的網站。
-                                </strong>
-                            </p>
-                        </div>
-                    </div>
-                </div> -->
+                </div>
         </section>
 
-        <section id="performance" class="list-item " style="background-color: #f7f7f7; ">
+        <section id="taicca" class="list-item ">
             <div class="container ">
-                <h4 class="heading my-4 project-heading ">展演成果 Performance</h4>
+                <h4 class="heading my-4 project-heading ">文策院加速器 Taicca </h4>
                 <div class="row justify-content-center ">
                     <div class="col-lg-8 my-3 ">
+                        <h3 class="page-heading my-2"><strong>第三期文化創業加速器</strong></h3>
+                        <div class="row list-padding mt-2 ">
+                            <ui class="content-black ">
+                                <li class="mb-2">協助團隊進行文策院加速器新創專案規劃，負責海報設計、募資簡報製作與 <span>Meet Taipei 公開發表提案</span>，於投資媒合會成功吸引兩家投資商注意與拉拔團隊意願。</li>
+                                <li class="mb-2">參與 37 學分<span>新創營運課程</span>，內容包含商業模式建立、目標市場訂定、組織經營、財務管理等，有助於了解新創生態，與協助團隊在初創期進行經營模式規劃。</li>
+                            </ui>
+                        </div>
 
-                        <h3 class="text-center page-heading mb-3"><strong>透過相同技術，搭配不同音樂與編舞，展現多元夢境樣貌。</strong></h3>
-                        <iframe class="dream-iframe my-2" width="100%" height="400" src="https://www.youtube.com/embed/a_V6Be4o2uY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                        <iframe class="dream-iframe my-2" width="100%" height="400" src="https://www.youtube.com/embed/V1vwl2SPlSQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
+                        <div class="row justify-content-start">
+                            <div class="col-lg-8 col-md-8 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/demo1-cat.JPG" alt="文化創新加速器 課程">
+                            </div>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-lg-8 col-md-8 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/demo2-cat.JPG" alt="文化創新加速器 課程">
+                            </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-lg-8 col-md-8 col-sm-12">
+                                <img class="my-3 img-margin " width="100% " src="../img/special-project/createarttalk/course-cat.jpg" alt="文化創新加速器 課程">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
