--- a/project/dream.html
+++ b/project/dream.html
@@ -157,12 +157,12 @@
 
                             <div class="row justify-content-start">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/start1-dream.png" alt="夢中夢 晚安 ">
+                                    <img class="my-2 img-margin " width="100% " src="../img/special-project/dream/start1-dream.png" alt="夢中夢 晚安 ">
                                 </div>
                             </div>
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/start2-dream.png" alt="夢中夢 晚安 ">
+                                    <img class="mt-3 mb-4 img-margin " width="100% " src="../img/special-project/dream/start2-dream.png" alt="夢中夢 晚安 ">
                                 </div>
                             </div>
                         </div>
@@ -190,12 +190,12 @@
 
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/fast1-dream.png" alt="夢中夢 快速動眼期">
+                                    <img class="my-2 img-margin " width="100% " src="../img/special-project/dream/fast1-dream.png" alt="夢中夢 快速動眼期">
                                 </div>
                             </div>
                             <div class="row justify-content-start">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/fast2-dream.png" alt="夢中夢 快速動眼期">
+                                    <img class="mt-3 mb-4 img-margin " width="100% " src="../img/special-project/dream/fast2-dream.png" alt="夢中夢 快速動眼期">
                                 </div>
                             </div>
                         </div>
@@ -209,29 +209,17 @@
 
                             <div class="row justify-content-start">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/sleep1-dream.png" alt="夢中夢 熟睡期">
+                                    <img class="my-2 img-margin " width="100% " src="../img/special-project/dream/sleep1-dream.png" alt="夢中夢 熟睡期">
                                 </div>
                             </div>
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 col-md-8 col-sm-12">
-                                    <img class="my-4 img-margin " width="100% " src="../img/special-project/dream/sleep2-dream.png" alt="夢中夢 熟睡期">
+                                    <img class="mt-3 mb-4 img-margin " width="100% " src="../img/special-project/dream/sleep2-dream.png" alt="夢中夢 熟睡期">
                                 </div>
                             </div>
                         </div>
 
                     </div>
-                    <!-- 
-
-
-                    <div id="conclusion" class="col-lg-8 my-5">
-                        <h3 class="page-heading mb-3 "><strong>06 結論</strong></h3>
-                        <div class="content-black">
-                            <p>在使用者測試後得到的實質回饋，得以協助我們修正網站的缺失，提醒我們未能發掘的觀點，於以在未來改善修正成擁有良好使用者體驗的網站。
-                                </strong>
-                            </p>
-                        </div>
-                    </div>
-                </div> -->
         </section>
 
         <section id="performance" class="list-item " style="background-color: #f7f7f7; ">
