--- a/about.html
+++ b/about.html
@@ -53,7 +53,6 @@
     <section id="about" class="project my-3">
         <div class="container">
             <div class="row project-center">
-
                 <div class="col-lg-5 col-md-12 col-sm-12 my-auto about-photo">
                     <img style="width: 100%;" class="center " src="./img/about/about-me.jpg" alt="HSU CHING CHUN">
                 </div>
@@ -69,20 +68,24 @@
 
                         </p>
                         <br>
+                        <div class="row">
+                            <div class="text-start col-6">
+                                <a class="resume-btn" href="./pdf/resume-chingchun.pdf" target="_blank">Resume</a>
+                            </div>
+                            <div class="text-end col-6 pb-1">
+                                <a href="https://www.facebook.com/cherry.she.5/" target="_blank" class="bi bi-facebook"></a>
 
-                        <a href="https://www.facebook.com/cherry.she.5/" target="_blank" class="bi bi-facebook"></a>
-
-                        <!-- <i class="bi bi-envelope-fill"></i> -->
-                        <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
-                        <a href="mailto: chiharu.hsu@gmail.com" class="bi bi-envelope"></a>
+                                <!-- <i class="bi bi-envelope-fill"></i> -->
+                                <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
+                                <a href="mailto: chiharu.hsu@gmail.com" class="bi bi-envelope"></a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
             </div>
         </div>
-        </div>
     </section>
-
 
 
     <!-- Footer Section -->
