--- a/project/createarttalk.html
+++ b/project/createarttalk.html
@@ -100,12 +100,6 @@
         <a class="list-group-item list-group-item-action" href="#overview">總覽</a>
         <a class="list-group-item list-group-item-action" href="#front-end">前端設計</a>
         <a class="list-group-item list-group-item-action" href="#taicca">文策院加速器</a>
-        <!-- <a class="list-group-item list-group-item-action" href="#taicca">文策院加速器</a> -->
-        <a class="ms-3 list-group-item list-group-item-action" href="#good-night">晚安</a>
-        <a class="ms-3 list-group-item list-group-item-action" href="#light-sleep">淺眠期</a>
-        <a class="ms-3 list-group-item list-group-item-action" href="#rapid-eye">快速動眼期</a>
-        <a class="ms-3 list-group-item list-group-item-action" href="#deep-sleep">熟睡期</a>
-        <a class="list-group-item list-group-item-action" href="#performance">展演成果</a>
         <a class="list-group-item list-group-item-action" href="#learning">學習</a>
     </div>
 
@@ -126,7 +120,7 @@
                             <ui class="content-black ">
                                 <li class="mb-2">整合團隊現有資料，製作靜態前端網頁</li>
                                 <li class="my-2">文策院文化新創加速器第三期 Demo Day 發表</li>
-                                <li class="my-2">統整現有系統流程，規劃未來產品</li>
+                                <li class="my-2">統整現有系統流程，規劃未來產品 （多屬非公開技術）</li>
                             </ui>
                         </div>
                     </div>
@@ -142,6 +136,7 @@
                         <h3 class="page-heading"><strong><span>CreateArtTalk</span> 官網</strong></h3>
                         <div class="row list-padding mt-2 ">
                             <ui class="content-black ">
+                                <li class="mb-2"><a href="https://createarttalk.github.io/" target="_blank">網頁連結</a></li>
                                 <li class="mb-2">獨力完成網頁前端設計，使用 HTML、CSS、Javascript、jQuery 製作網頁</li>
                                 <li class="mb-2">首頁採用 three.js、particle.js 製作 banner</li>
                                 <li class="my-2">整合團隊目前作品，撰寫文稿與版型排版設計</li>
@@ -214,7 +209,7 @@
             </div>
         </section>
 
-        <section id="learning " class="list-item ">
+        <section id="learning" class="list-item ">
             <div class="container ">
                 <h4 class="heading my-4 project-heading ">學習 Learning</h4>
                 <div class="row justify-content-center ">
@@ -222,7 +217,10 @@
                         <h3 class="page-heading my-2 "><strong></strong></h3>
                         <div class="content-black ">
                             <p>
-                                為了打造沉浸式體驗，我們嘗試融入視覺、聽覺與情感表達於互動設計之中，借用科技，讓無法實體化的夢境，能夠邀請他人一同參與，體驗原先只存於腦海的想像，且能夠更加生動、有趣。這也是我第一次實作互動藝術專案，透過與組員的合作，發揮所長，能讓構想有更多實現創意的可能性。
+                                在團隊中擔任前端設計的工作，讓我能夠重新熟悉網頁前端切版的操作，並與設計合作，將符合團隊風格的設計視覺化呈現。
+                            </p>
+                            <p>
+                                加入新創加速器讓我認識新創產業在初期所需要考量的面向，同時參加了 Meet Taipei 學習如何站在眾多投資人面前，宣傳推廣團隊的產品與理念，對我而言，是一座新的里程碑。
                             </p>
                         </div>
                     </div>
@@ -233,7 +231,7 @@
                             <a class="py-1 go-tag " onclick="self.location.href='../index.html' " value="回首頁 "><span>回首頁</span></a>
                         </div>
                         <div class="text-end col-9 ">
-                            <a class="py-1 go-tag " onclick="self.location.href='pocketWorld.html' "><span>NEXT | CreateArtTalk </span></a>
+                            <a class="py-1 go-tag " onclick="self.location.href='dream.html' "><span>NEXT | 夢中夢</span></a>
                         </div>
                     </div>
                 </div>
