--- a/project/dream.html
+++ b/project/dream.html
@@ -118,7 +118,7 @@
                         <div class="content-black">
                             <p>「夢反映著自己的潛意識，同時也代表最真實的自己。」</p>
                             <p>「夢中夢，是結構複雜的夢，是多個夢境的重合體。」</p>
-                            <p>夢中夢是一場五分鐘的互動設計展演，於四面沉浸式投影展演空間（白盒子）中，以夢為主軸結合舞者編舞，帶領觀眾經歷夢境的四個階段：晚安→淺眠期→快速動眼期→熟睡期。</p>
+                            <p>夢中夢是一場<span>五分鐘的互動設計展演</span>，於四面沉浸式投影展演空間（白盒子）中，以夢為主軸結合舞者編舞，帶領觀眾經歷夢境的四個階段：晚安→淺眠期→快速動眼期→熟睡期。</p>
                             <p>藉由 Kincet 偵測人體動作，可讓舞者與劇場中的線條、光影、音樂即時互動與呈現。</p>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
             </div>
         </section>
 
-        <section id="learning " class="list-item ">
+        <section id="learning" class="list-item ">
             <div class="container ">
                 <h4 class="heading my-4 project-heading ">學習 Learning</h4>
                 <div class="row justify-content-center ">
