--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
 
     <!-- PRE LOADER -->
 
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="spinner">
             <span class="spinner-rotate"></span>
         </div>
-    </div> -->
+    </div>
 
 
     <!-- Navigation Section -->
@@ -83,6 +83,7 @@
 
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
