--- a/about.html
+++ b/about.html
@@ -62,10 +62,10 @@
                     <div class="project-black mx-3">
                         <h3 class="project-title"><strong>哈囉，我是許青純<i class="bi bi-emoji-smile"></i></strong>
                         </h3>
-                        <p>畢業於臺灣大學圖書資訊學系，輔系生物產業發展暨傳播學系，大學期間，嘗試在人、資訊、傳播的領域中找到平衡。
-                            <p>過程中我發現我對於數位設計很有興趣，尤其是UIUX與前端設計，而我也將帶著這份熱忱進入政治大學數位內容碩士學位學程，深入了解該領域有趣的知識，並學習以人為本，探討人的感受、想法與行為。</p>
-                            <p>同時，我也透過課程精進前端設計技能，讓我能讀懂他人的需求與工程師的語言，擁有跨領域的能力，使專案溝通達到更好的效果。</p>
-
+                        <p>目前就讀於政治大學數位內容碩士學程，畢業於臺灣大學圖書資訊學系，輔系生物產業發展暨傳播學系，結合資訊、傳播與敘事是我的長處所在。</p>
+                            <p>在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~</p>
+                            <p>學習的過程很艱辛但也很有趣，因為常常可以見識到很多奇妙又新鮮的idea，在相互碰撞之下，又會產生許許多多不可思議的化學效應！</p>
+                            <p>不過這條路很漫長，為了擁有堅實的腿走得更遠，偶爾爬爬山是我的興趣之一，近期目標是爬完台北大縱走><</p>
                         </p>
                         <br>
                         <div class="row">
