--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
     </div>
 
     <!-- About Section -->
+
     <section id="about" class="project my-3">
         <div class="container">
             <div class="row project-center">
@@ -62,15 +63,31 @@
                     <div class="project-black mx-3">
                         <h3 class="project-title"><strong>哈囉，我是許青純<i class="bi bi-emoji-smile"></i></strong>
                         </h3>
-                        <p>目前就讀於政治大學數位內容碩士學程，畢業於臺灣大學圖書資訊學系，輔系生物產業發展暨傳播學系，結合資訊、傳播與敘事是我的長處所在。</p>
+                        <div class="my-3">
+                            <p class="border-bottom">學歷</p>
+                            <table class="table table-borderless">
+                                <tbody>
+                                    <tr>
+                                    <th class="fst-italic"scope="row">2023 -</th>
+                                    <td>國立政治大學</td>
+                                    <td>數位內容碩士學程</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="fst-italic"scope="row">2018-2022</th>
+                                        <td>國立臺灣大學</td>
+                                        <td>圖書資訊學系 <br>
+                                            輔 生物產業傳播技發展學系 <br>
+                                            資訊設計與視覺敘事領域專長 <br>
+                                            傳播學程 
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             <p>在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~</p>
-                            <p>學習的過程很艱辛但也很有趣，因為常常可以見識到很多奇妙又新鮮的idea，在相互碰撞之下，又會產生許許多多不可思議的化學效應！</p>
-                            <p>不過這條路很漫長，為了擁有堅實的腿走得更遠，偶爾爬爬山是我的興趣之一，近期目標是爬完台北大縱走><</p>
-                        </p>
-                        <br>
-                        <div class="row">
+                        </div>
+                        <div class="row mt-5">
                             <div class="text-start col-6">
-                                <a class="resume-btn" href="./pdf/resume-chingchun.pdf" target="_blank">Resume</a>
+                                <a class="resume-btn" href="./pdf/resume_chingchun.pdf" target="_blank">Resume</a>
                             </div>
                             <div class="text-end col-6 pb-1">
                                 <a href="https://www.facebook.com/cherry.she.5/" target="_blank" class="bi bi-facebook"></a>
@@ -87,6 +104,7 @@
             </div>
         </div>
     </section>
+
 
 
     <!-- Footer Section -->
