--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
 
     <title>CHING-CHUN</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/templatemo-style.css">
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
@@ -24,11 +25,11 @@
 
     <!-- PRE LOADER -->
 
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="spinner">
             <span class="spinner-rotate"></span>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Navigation Section -->
@@ -37,7 +38,9 @@
         <div class="container px-lg-3">
             <a class="navbar-brand" href="index.html">
                 <img src="" class="nav-logo ">CC</a>
-            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -68,17 +71,17 @@
                             <table class="table table-borderless">
                                 <tbody>
                                     <tr>
-                                    <th class="fst-italic"scope="row">2023 -</th>
-                                    <td>國立政治大學</td>
-                                    <td>數位內容碩士學程</td>
+                                        <th class="fst-italic" scope="row">2023 -</th>
+                                        <td>國立政治大學</td>
+                                        <td>數位內容碩士學程</td>
                                     </tr>
                                     <tr>
-                                        <th class="fst-italic"scope="row">2018-2022</th>
+                                        <th class="fst-italic" scope="row">2018-2022</th>
                                         <td>國立臺灣大學</td>
                                         <td>圖書資訊學系 <br>
                                             輔 生物產業傳播技發展學系 <br>
                                             資訊設計與視覺敘事領域專長 <br>
-                                            傳播學程 
+                                            傳播學程
                                         </td>
                                     </tr>
                                 </tbody>
@@ -90,7 +93,8 @@
                                 <a class="resume-btn" href="./pdf/resume_chingchun.pdf" target="_blank">Resume</a>
                             </div>
                             <div class="text-end col-6 pb-1">
-                                <a href="https://www.facebook.com/cherry.she.5/" target="_blank" class="bi bi-facebook"></a>
+                                <a href="https://www.facebook.com/cherry.she.5/" target="_blank"
+                                    class="bi bi-facebook"></a>
 
                                 <!-- <i class="bi bi-envelope-fill"></i> -->
                                 <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
@@ -135,7 +139,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
     <script src="./js/custom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js "
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous ">
+    </script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
 <script src="js/sketch.js "></script> -->
 </body>
