--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <title>CHING-CHUN</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/templatemo-style.css">
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- media query preload -->
     <!-- <link rel="preload" href="./img/home_bg.png" as="image" /> -->
 </head>
@@ -26,11 +27,11 @@
 
     <!-- PRE LOADER -->
 
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="spinner">
             <span class="spinner-rotate"></span>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Navigation Section -->
@@ -39,7 +40,9 @@
         <div class="container px-lg-3">
             <a class="navbar-brand" href="index.html">
                 <img src="" class="nav-logo ">CC</a>
-            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -55,15 +58,19 @@
     <!-- Home Section start-->
 
     <section id="home" class="navbar-trans">
-        <div class="container-fluid home">
-            <h3 class="typing" data-wow-delay="0.6s">哈囉,&nbsp&nbsp我是 許青純</h3>
-            <h3 class="">Hi, I'm HSU,CHING-CHUN.
-            </h3>
-            <!-- <a href="#about" class="btn" data-wow-delay="1.4s">KNOW MORE</a> -->
-            <h4>夢想是成為數位設計師<br><br> HCI．UIUX．WEB Design
-            </h4>
+        <div class="function-based-values-demo">
+            <div class="circle el" data-x="500"></div>
+            <div class="circle el" data-x="200"></div>
+            <div class="circle el" data-x="300"></div>
         </div>
-
+        <!-- <div class="circle el"></div> -->
+        <div class="container-fluid home" data-aos="zoom-in">
+            <h3 class="typing " data-wow-delay="0.6s"><b>哈囉，我是許青純</b></h2>
+                <h3 class="border-bottom"> Hi, I'm Sherry Hsu. </h3>
+                <!-- <a href="#about" class="btn" data-wow-delay="1.4s">KNOW MORE</a> -->
+                <h3 class="mb-0" style="font-size: 18px;">UI/UX Designer</h3>
+                <h4>HCI．UIUX．WEB Design</h4>
+        </div>
     </section>
     <!-- Home Section end-->
 
@@ -76,9 +83,10 @@
         </div>
 
         <!-- Project1 start-->
-        <section id="project1" class="project">
-            <div class="container card">
-                <div class="row project-reverse">
+        <section id="project1" class="project" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
+            <div class=" container card">
+                <div class="row project-reverse ">
                     <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
                         <div class="project-black mx-3">
                             <h3 class="keep-all"><strong> Pocket World AR 口袋世界擴增實境</strong>
@@ -97,7 +105,8 @@
                             <img style="width: 100%;" class="center" src="./img/feature-project/pocketworld/pocket-cover-mobile.png" alt="Pocket World AR">
                         </a> -->
                         <a class="d-flex justify-content-center" href="./project/pocketWorld.html">
-                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/pocketworld/pocket-cover-mobile.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
+                            <div class="d-flex mb-3 img-mobile"
+                                style="background-image:url(./img/feature-project/pocketworld/pocket-cover-mobile.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
                             </div>
                         </a>
                     </div>
@@ -107,7 +116,8 @@
         </section>
 
         <!-- Project2 start-->
-        <section id="project2" class="project">
+        <section id="project2" class="project" data-aos="fade-left" data-aos-duration="500" data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
             <div class="container card">
                 <div class="row ">
                     <div class="col-lg-6 col-md-6 col-sm-12">
@@ -116,7 +126,8 @@
                         </a> -->
 
                         <a class="d-flex justify-content-center" href="./project/moodlight.html">
-                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/moodlight/moodlight-mockup.png); background-size: cover; background-repeat: no-repeat;background-position: center;">
+                            <div class="d-flex mb-3 img-mobile"
+                                style="background-image:url(./img/feature-project/moodlight/moodlight-mockup.png); background-size: cover; background-repeat: no-repeat;background-position: center;">
                             </div>
                         </a>
                     </div>
@@ -140,7 +151,8 @@
         </section>
 
         <!-- Project3 start-->
-        <section id="project3" class="project">
+        <section id="project3" class="project" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
             <div class="container card">
                 <div class="row project-reverse">
                     <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
@@ -158,7 +170,8 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <a class="d-flex justify-content-center" href="./project/exshare.html">
-                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/exshare/cover-ex.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
+                            <div class="d-flex mb-3 img-mobile"
+                                style="background-image:url(./img/feature-project/exshare/cover-ex.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
                             </div>
                         </a>
                         <!-- <a href="./project/exshare.html">
@@ -180,13 +193,15 @@
         <section id="special-project" class="project">
             <div class="container px-0 ">
                 <div class="row mx-auto project-center justify-content-center">
-                    <div class="card col-lg-5 col-md-8 col-sm-12 ">
+                    <div class="card col-lg-5 col-md-8 col-sm-12 " data-aos="fade-down" data-aos-duration="500"
+                        data-aos-offset="300" data-aos-easing="ease-in-sine">
                         <div class="row ">
                             <!-- <div class="d-flex justify-content-center ">
                                 <img class="mb-3" width="100% " src="./img/special-project/dream/dream1.png" alt="A Dream Within a Dream 夢中夢">
                             </div> -->
                             <a class="d-flex justify-content-center" href="./project/dream.html">
-                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/dream/cover-dream.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                <div class="d-flex mb-3 img-mobile"
+                                    style="background-image:url(./img/special-project/dream/cover-dream.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
                                 </div>
                             </a>
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
@@ -206,10 +221,12 @@
                         </div>
                     </div>
                     <div class="col-lg-1 col-md-"></div>
-                    <div class="card col-lg-5 col-md-8 col-sm-12 ">
+                    <div class="card col-lg-5 col-md-8 col-sm-12 " data-aos="fade-down" data-aos-duration="1000"
+                        data-aos-offset="300" data-aos-easing="ease-in-sine">
                         <div class="row project2 ">
                             <a class="d-flex justify-content-center" href="./project/createarttalk.html">
-                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/createarttalk/cover-cat.png);background-size: cover; background-repeat: no-repeat;background-position: center;">
+                                <div class="d-flex mb-3 img-mobile"
+                                    style="background-image:url(./img/special-project/createarttalk/cover-cat.png);background-size: cover; background-repeat: no-repeat;background-position: center;">
                                 </div>
                             </a>
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
@@ -219,7 +236,8 @@
                                     <p>將物聯網 IoT 技術結合科技藝術的新創團隊，提供藝術創作者多合一的互動 IoT 管理平台，以降低互動技術門檻。</p>
                                     <h4 class="">#前端設計 #新創專案 </h4>
                                     <br>
-                                    <a href="./project/createarttalk.html" class=" btn project-tag " data-wow-delay="1.4s ">
+                                    <a href="./project/createarttalk.html" class=" btn project-tag "
+                                        data-wow-delay="1.4s ">
                                         <h4>了解更多</h4>
                                     </a>
 
@@ -267,13 +285,22 @@
     <!-- SCRIPTS -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js "
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous ">
+    </script>
     <script src="./js/custom.js "></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
     <script src="js/sketch.js "></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
+    <script src="/js/anime.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
