--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <!-- <div class="circle el"></div> -->
         <div class="container-fluid home" data-aos="zoom-in">
-            <h3 class="typing " data-wow-delay="0.6s"><b>哈囉，我是許青純</b></h2>
+            <h3 class="typing pt-3 " data-wow-delay="0.6s"><b>哈囉，我是許青純</b></h2>
                 <h3 class="border-bottom"> Hi, I'm Sherry Hsu. </h3>
                 <!-- <a href="#about" class="btn" data-wow-delay="1.4s">KNOW MORE</a> -->
                 <h3 class="mb-0" style="font-size: 18px;">UI/UX Designer</h3>
